# surgi_roles_access

./: MANIFEST.in  README.md  apps.txt  pyproject.toml  setup.py
surgi_roles_access/: hooks.py
surgi_roles_access/config/: dashboard_roles.py
surgi_roles_access/dashboard/: customer_dashboard.py  customer_dashboard_config.py
surgi_roles_access/overrides/: dashboard.py
surgi_roles_access/public/js/: customer_dashboard.js
surgi_roles_access/surgi_roles_access/: hooks.py
